# mermaid-electron

./: .gitignore  README.md  electron-builder.yml  justfile  package.json  pyproject.toml
.github/workflows/: build.yml
example/: main.py  validate.py
src/: electron.js  index.html  renderer.js
